# decontamination

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: benchmarks.yaml  datasets.yaml
configs/ds/: index.yaml  remove.yaml  search.yaml
configs/es/: build.yaml  prepare.yaml
src/decontamination/: __init__.py  util.py
src/decontamination/cli/: ds.py  es.py  util.py
src/decontamination/ds/: __init__.py  config.py  index.py  remove.py  search.py  util.py
src/decontamination/ds/templates/: decontamination_section.md.j2
src/decontamination/es/: __init__.py  build.py  prepare.py  run.py  util.py
