[project]
name = "decontamination"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Elganzory", email = "alielganzory@hotmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.7.0",
    "elasticsearch>=9.3.0",
    "huggingface-hub>=1.7.1",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "tqdm>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
es = "decontamination.cli.es:main"
ds = "decontamination.cli.ds:main"
